# C-practical-labs

Lab_ModulesAndTopDown/restaurant/: customer.h  interface.c  order.h
Lab_ModulesAndTopDown/solution/: customer.c  interface.c  order.c  order.h
Lab_Pointers/: Dereferencing.c  Pointer_Arithmetic.c  Pointer_to_Pointer.c  a.out
cw1/: .nfs0000000008f25edd00014591  .nfs0000000008f260720001454d  .nfs0000000008f2789c00014610  .nfs0000000008f278a600014537  .nfs0000000008f278a70001461c  .nfs0000000008f278a80001457a  .nfs0000000008f278a9000145c2  .nfs0000000008f278aa00014614  CMakeLists.txt  Reflection.docx  a.out  book_management.c  book_management.h  books.csv  lib_interface.c  lib_interface.h  library.c  library.h  loans.csv  main.c  store_books_cloner.csv  template.c  test_file.csv  unit_tests.c  users.c  users.csv  users.h  users_test_file.csv
